# FastAxum

./: Cargo.toml  Dockerfile  README.md
k8s/: 1-cicd-namespace.yaml  2-gitea-values.yaml  3-gitea-svc-lb.yaml  4-argocd-svc-lb.yaml  5-dev-namespace.yaml  5-namespaces.yaml
k8s/argocd-app/: app-deployment.yaml
k8s/argocd-crds/: grafana-instance.yaml  grpc-instrumentation.yaml  otel-collector.yaml
k8s/argocd-gitops/: cert-manager-operator.yaml  crds.yaml  grafana-operator.yaml  grafana-tempo.yaml  opentelemetry-operator.yaml  prometheus-operator.yaml  sampleapp.yaml
src/: main.rs
src/logic/: domains.rs
src/trace/: otel.rs
